Client version update