@@ -33,9 +33,7 @@ import org.aspectj.lang.JoinPoint;
 import org.aspectj.lang.annotation.*;
 import org.aspectj.lang.reflect.MethodSignature;
 
-import java.util.Calendar;
-import java.util.Collections;
-import java.util.HashMap;
+import java.time.Instant;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
@@ -45,12 +43,16 @@ import static java.util.Optional.ofNullable;
 @Aspect
 public class StepAspect {
 
-	private static final Map<Status, ItemStatus> STATUS_MAPPER = Collections.unmodifiableMap(new HashMap<Status, ItemStatus>() {{
-		put(Status.PASSED, ItemStatus.PASSED);
-		put(Status.FAILED, ItemStatus.FAILED);
-		put(Status.BROKEN, ItemStatus.INTERRUPTED);
-		put(Status.SKIPPED, ItemStatus.SKIPPED);
-	}});
+	private static final Map<Status, ItemStatus> STATUS_MAPPER = Map.of(
+			Status.PASSED,
+			ItemStatus.PASSED,
+			Status.FAILED,
+			ItemStatus.FAILED,
+			Status.BROKEN,
+			ItemStatus.INTERRUPTED,
+			Status.SKIPPED,
+			ItemStatus.SKIPPED
+	);
 
 	private static final Map<String, AtomicLong> STEP_COUNTERS = new ConcurrentHashMap<>();
 
@@ -79,6 +81,7 @@ public class StepAspect {
 				ofNullable(signature.getMethod().getAnnotation(Description.class)).map(Description::value)
 						.filter(d -> !d.isEmpty())
 						.orElse(null),
+				Instant.now(),
 				signature
 		);
 		//noinspection ReactiveStreamsUnusedPublisher
@@ -86,7 +89,7 @@ public class StepAspect {
 		ofNullable(startStepRequest.getDescription()).ifPresent(d -> ReportPortal.emitLog(
 				STEP_DESCRIPTION + d,
 				LogLevel.INFO.name(),
-				Calendar.getInstance().getTime()
+				Instant.now()
 		));
 	}
 
@@ -99,7 +102,7 @@ public class StepAspect {
 	@AfterThrowing(value = "!stepMethod() && (anyMethod() && withStepAnnotation(step))", argNames = "step")
 	public void failedNestedStep(Step step) {
 		ofNullable(Launch.currentLaunch()).ifPresent(l -> {
-			FinishTestItemRQ rq = StepRequestUtils.buildFinishTestItemRequest(ItemStatus.FAILED);
+			FinishTestItemRQ rq = StepRequestUtils.buildFinishTestItemRequest(ItemStatus.FAILED, Instant.now());
 			l.getStepReporter().finishNestedStep(rq);
 		});
 	}
@@ -122,7 +125,11 @@ public class StepAspect {
 					String stepName = innerClassSignIndex > 0 ?
 							parentSimpleName + " anonymous step " + stepCounter.incrementAndGet() :
 							parentSimpleName + " step " + stepCounter.incrementAndGet();
-					StartTestItemRQ rq = com.epam.reportportal.service.step.StepRequestUtils.buildStartStepRequest(stepName, null);
+					StartTestItemRQ rq = com.epam.reportportal.service.step.StepRequestUtils.buildStartStepRequest(
+							stepName,
+							null,
+							Instant.now()
+					);
 					//noinspection ReactiveStreamsUnusedPublisher
 					ofNullable(Launch.currentLaunch()).ifPresent(l -> l.getStepReporter().startNestedStep(rq));
 				}
@@ -131,7 +138,8 @@ public class StepAspect {
 				if (args[1] instanceof Status) {
 					StartTestItemRQ rq = com.epam.reportportal.service.step.StepRequestUtils.buildStartStepRequest(
 							args[0].toString(),
-							null
+							null,
+							Instant.now()
 					);
 					//noinspection ReactiveStreamsUnusedPublisher
 					ofNullable(Launch.currentLaunch()).ifPresent(l -> l.getStepReporter().startNestedStep(rq));
@@ -141,7 +149,8 @@ public class StepAspect {
 						|| args[1] instanceof Allure.ThrowableContextRunnableVoid || args[1] instanceof Allure.ThrowableContextRunnable) {
 					StartTestItemRQ rq = com.epam.reportportal.service.step.StepRequestUtils.buildStartStepRequest(
 							args[0].toString(),
-							null
+							null,
+							Instant.now()
 					);
 					//noinspection ReactiveStreamsUnusedPublisher
 					ofNullable(Launch.currentLaunch()).ifPresent(l -> l.getStepReporter().startNestedStep(rq));
@@ -165,15 +174,16 @@ public class StepAspect {
 				return;
 			case 2:
 				if (args[1] instanceof Status) {
-					FinishTestItemRQ rq = com.epam.reportportal.service.step.StepRequestUtils.buildFinishTestItemRequest(ofNullable(
-							STATUS_MAPPER.get((Status) args[1])).orElseGet(() -> {
-						ReportPortal.emitLog(
-								"Unable to convert item status: " + args[1].toString(),
-								LogLevel.ERROR.name(),
-								Calendar.getInstance().getTime()
-						);
-						return ItemStatus.FAILED;
-					}));
+					FinishTestItemRQ rq = com.epam.reportportal.service.step.StepRequestUtils.buildFinishTestItemRequest(
+							ofNullable(STATUS_MAPPER.get((Status) args[1])).orElseGet(() -> {
+								ReportPortal.emitLog(
+										"Unable to convert item status: " + args[1].toString(),
+										LogLevel.ERROR.name(),
+										Instant.now()
+								);
+								return ItemStatus.FAILED;
+							}), Instant.now()
+					);
 					ofNullable(Launch.currentLaunch()).ifPresent(l -> l.getStepReporter().finishNestedStep(rq));
 					return;
 				}
@@ -195,14 +205,14 @@ public class StepAspect {
 					return;
 				}
 				if (args[0] instanceof Allure.ThrowableContextRunnableVoid || args[0] instanceof Allure.ThrowableContextRunnable) {
-					FinishTestItemRQ rq = StepRequestUtils.buildFinishTestItemRequest(ItemStatus.FAILED);
+					FinishTestItemRQ rq = StepRequestUtils.buildFinishTestItemRequest(ItemStatus.FAILED, Instant.now());
 					ofNullable(Launch.currentLaunch()).ifPresent(l -> l.getStepReporter().finishNestedStep(rq));
 				}
 				return;
 			case 2:
 				if (args[1] instanceof Allure.ThrowableRunnable || args[1] instanceof Allure.ThrowableRunnableVoid
 						|| args[1] instanceof Allure.ThrowableContextRunnableVoid || args[1] instanceof Allure.ThrowableContextRunnable) {
-					FinishTestItemRQ rq = StepRequestUtils.buildFinishTestItemRequest(ItemStatus.FAILED);
+					FinishTestItemRQ rq = StepRequestUtils.buildFinishTestItemRequest(ItemStatus.FAILED, Instant.now());
 					ofNullable(Launch.currentLaunch()).ifPresent(l -> l.getStepReporter().finishNestedStep(rq));
 				}
 		}
